# librime

./: .gitignore  Makefile  README-iOS.md  deps.mk  xcode.mk
cmake/: FindMarisa.cmake
src/: CMakeLists.txt
test/: CMakeLists.txt
tools/: CMakeLists.txt
